##########################
# Setup.py Configuration #
##########################
# Configuring setup()
[metadata]
name = hypothesis_ebnf
version = 0.0.1-dev
url = https://github.com/cthoyt/hypothesis-ebnf
author = Charles Tapley Hoyt
author_email = cthoyt@gmail.com
maintainer = Charles Tapley Hoyt
maintainer_email = cthoyt@gmail.com
classifiers =
    Development Status :: 1 - Planning
    Intended Audience :: Developers
    Programming Language :: Python
    Programming Language :: Python :: 3 :: Only
license = MIT
description = A Hypothesis strategy for generating sentences from an EBNF grammar
long_description = file: README.rst
keywords =
    Property based testing

[options]
install_requires =
    hypothesis
    nltk
python_requires = >=3.6
tests_require =
    tox
packages = find:
package_dir =
    = src

[options.packages.find]
where = src

# configuring bdist_wheel
[bdist_wheel]
# I use f-strings. Upgrade yo' Python!
# TODO change this appropriately for 3.7
python-tag = py36
